#48 #76 Fix vertical align each element, Adds youtube video iframe

--- a/frontend/src/components/BusinessPage/BusinessPage.scss
+++ b/frontend/src/components/BusinessPage/BusinessPage.scss
@@ -78,6 +78,12 @@
         .business-details-body-staff-images {
           width: 100%;
         }
+
+        .business-detail-video-iframe {
+          width: 100%;
+          height: auto;
+          min-height: 450px;
+        }
       }
     }
 
@@ -489,6 +495,12 @@
 
         .business-details-body-staff-images {
           width: 100%;
+        }
+
+        .business-detail-video-iframe {
+          width: 100%;
+          height: auto;
+          min-height: 400px;
         }
       }
     }
